syntax = "proto3";
package gnoland.bank;

message MsgSend {
	string from_address = 1;
	string to_address = 2;
	string amount = 3;
}
